--- a/nevergiveup/server/package.json
+++ b/nevergiveup/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
 }
